--- a/food_delivery_app/requirements.txt
+++ b/food_delivery_app/requirements.txt
@@ -1,11 +1,16 @@
 asgiref==3.6.0
 build==0.10.0
+click==8.1.3
+dj-database-url==2.0.0
 Django==4.2.1
-django-delivery-app @ file:///Users/bohda/project0/food_delivery_app/dist/django-delivery-app-0.1.tar.gz#sha256=857f0d0255a8e4ce61f276076f0cd2c15ddc1aca7fb72f156e5d93ac8a5304a3
-django-polls @ file:///Users/bohda/django-polls/dist/django-polls-0.1.tar.gz#sha256=74b2e99ed3c1b689e9d74939da0431f880c1f215bd0e177ecdd1140c9be290ba
+django-on-heroku==1.1.2
 gunicorn==20.1.0
+h11==0.14.0
 packaging==23.1
 Pillow==9.5.0
+psycopg2-binary==2.9.6
 pyproject_hooks==1.0.0
 sqlparse==0.4.4
+typing_extensions==4.6.2
+uvicorn==0.22.0
 whitenoise==6.4.0
